--- a/client/Udemy-Ecommerce-Clone-Frontend-/src/App.scss
+++ b/client/Udemy-Ecommerce-Clone-Frontend-/src/App.scss
@@ -74,7 +74,6 @@
     --fg: hsl(var(--hue), 90%, 10%);
     --primary: hsl(var(--hue), 90%, 50%);
     --trans-dur: 0.3s;
-    font-size: calc(16px + (32 - 16) * (100vw - 320px) / (2560 - 320));
 }
 
 /* global styles and resets */
@@ -88,11 +87,10 @@
 }
 
 html {
-    font-size: 10px;
+    font-size: 16px;
 }
 
 body {
-    font-size: 1.6rem;
     line-height: 1.6;
     font-family: var(--base-font);
     color: var(--clr-black);
@@ -428,6 +426,10 @@ select {
     margin-top: 12px;
 }
 
+.mt-4 {
+    margin-top: 24px;
+}
+
 
 /* opacity */
 .opacity-09 {
@@ -740,4 +742,26 @@ select {
         font-weight: 500;
         padding-top: 10px;
     }
+}
+
+.login-sign-up-button {
+    width: 100%;
+    background-color: var(--color-purple-300);
+    padding: 14px 0px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    transition: 0.2s;
+
+    &:hover {
+        background-color: var(--color-purple-250);
+
+    }
+}
+
+.redirect-to-sign-up {
+    color: var(--color-purple-300);
+    font-weight: bold;
+    text-decoration: underline;
+    text-align: center;
 }
