--- a/client/Udemy-Ecommerce-Clone-Frontend-/src/App.scss
+++ b/client/Udemy-Ecommerce-Clone-Frontend-/src/App.scss
@@ -765,3 +765,8 @@ select {
     text-decoration: underline;
     text-align: center;
 }
+
+.tab-btn-active {
+    background-color: var(--clr-black);
+    color: var(--clr-white);
+}
