--- a/client/Udemy-Ecommerce-Clone-Frontend-/src/App.scss
+++ b/client/Udemy-Ecommerce-Clone-Frontend-/src/App.scss
@@ -74,6 +74,7 @@
     --fg: hsl(var(--hue), 90%, 10%);
     --primary: hsl(var(--hue), 90%, 50%);
     --trans-dur: 0.3s;
+
 }
 
 /* global styles and resets */
@@ -198,6 +199,14 @@ select {
 
 .gap-2 {
     gap: 12px;
+}
+
+.gap-3 {
+    gap: 18px;
+}
+
+.gap-4 {
+    gap: 24px;
 }
 
 .grid {
@@ -430,6 +439,37 @@ select {
     margin-top: 24px;
 }
 
+.mt-6 {
+    margin-top: 30px
+}
+
+.mb-4 {
+    margin-bottom: 24px;
+}
+
+// padding
+
+.px-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.py-1 {
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+.py-2 {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+// pointer
+
+.pointer {
+    cursor: pointer;
+}
+
 
 /* opacity */
 .opacity-09 {
@@ -461,6 +501,10 @@ select {
 /* Border */
 .border-thin-solid-black {
     border: 1px solid black;
+}
+
+.border-thin-solid-white {
+    border: 1px solid white;
 }
 
 // Fallback loading
@@ -717,6 +761,14 @@ select {
 
 }
 
+.button-teaching {
+    padding: var(--padding-button-normal);
+
+    &:hover {
+        background-color: #000;
+    }
+}
+
 .input-with-float-label {
     position: relative;
 
@@ -769,4 +821,49 @@ select {
 .tab-btn-active {
     background-color: var(--clr-black);
     color: var(--clr-white);
+}
+
+.blur-glass {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.course-img-wrapper {
+    position: relative;
+    cursor: pointer;
+}
+
+.app-footer {
+    background-color: var(--clr-dark);
+    color: white;
+    padding: 30px 0px;
+}
+
+.app-footer-column {
+    min-width: 250px;
+    font-size: 15px;
+}
+
+.app-footer-column ul li {
+    margin-top: 5px;
+}
+
+.single-course-item {
+    transition: 0.1s;
+}
+
+.single-course-item:hover {
+    background-color: rgb(89, 89, 89);
+}
+
+.single-course-item-active {
+    background-color: rgb(89, 89, 89);
 }
